# pipeline-builder

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/internal/handler/: build.go  pipeline.go  schedule.go
api/internal/model/: models.go
api/migrations/: 001_initial.sql
api/pkg/pipelinegraph/: graph.go
engine/: Dockerfile  pyproject.toml
engine/pipeline_engine/: executor.py  main.py  models.py  routes.py  schema.py
engine/pipeline_engine/transforms/: __init__.py  core.py  llm.py
engine/tests/: test_executor.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/nodes/: transform-node.tsx
frontend/src/components/panels/: data-preview.tsx  transform-panel.tsx
frontend/src/components/pipeline/: pipeline-editor.tsx
frontend/src/hooks/: use-pipeline-store.ts
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: pipeline.ts
spec/: openapi.yaml
