[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline_engine*"]

[project]
name = "pipeline-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
